force-app/main/default/objects/SampleThings__c/SampleThings__c.object-meta.xml
<CustomObject>
    <label>Sample Things</label>
    <nameField>
        <label>Sample Things Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>