force-app/main/default/objects/SampleThings__c/fields/CustomIconUrl2__c.field-meta.xml
<CustomField>
    <fullName>CustomIconUrl2__c</fullName>
    <formula>&apos;/img/func_icons/util/escalation16.gif&apos;</formula>
    <label>#2 Custom Icon URL</label>
    <type>Text</type>
</CustomField>