force-app/main/default/objects/SampleThings__c/fields/Popup__c.field-meta.xml
<CustomField>
    <fullName>Popup__c</fullName>
    <label>Popup</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>