force-app/main/default/objects/SampleThings__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&apos;Person&apos;</defaultValue>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Person</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Desk</fullName>
            </value>
            <value>
                <fullName>FlagGreen</fullName>
            </value>
            <value>
                <fullName>FlagRed</fullName>
            </value>
            <value>
                <fullName>FlagGoal</fullName>
            </value>
            <value>
                <fullName>Castle</fullName>
            </value>
            <value>
                <fullName>ShoppingCart</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Book</fullName>
            </value>
            <value>
                <fullName>Plane</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>