force-app/main/default/objects/SampleThings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Latitude__c</columns>
    <columns>Longitude__c</columns>
    <columns>Popup__c</columns>
    <columns>Type__c</columns>
    <columns>CustomIconUrl1__c</columns>
    <columns>CustomIconUrl2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>